# LLT-Assistant-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.py  test_redis.py
.github/workflows/: tests.yml
Doc/: DDL 战神计划.md  Frontend PRD.md  openapi.yaml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  context.py  orchestrator.py
app/analyzers/: diff_parser.py  rule_engine.py
app/api/: __init__.py
app/core/: analyzer.py  in_memory_tasks.py  llm_analyzer.py  tasks.py
app/models/: __init__.py
app/prompts/: coverage_optimization.yaml  generate_tests.yaml  impact_analysis.yaml  quality_analysis.yaml
app/utils/: __init__.py  json_cleaner.py  pylint_runner.py
data/: bugfix_pairs.jsonl  bugfix_pairs_data.jsonl  bugfix_pairs_new.jsonl  bugfix_pairs_with_meta.jsonl  bugfix_pairs_with_meta2.jsonl  dataset.jsonl  edge_cases.jsonl  readme.txt
data/raw/: bugfix011_buggy.py  bugfix014_buggy.py  bugfix014_fixed.py  bugfix017_buggy.py  bugfix017_fixed.py  bugfix018_buggy.py  bugfix018_fixed.py
data/reports/: bugfix001_report.txt  bugfix002_report.txt  bugfix003_report.txt  bugfix004_report.txt  bugfix005_report.txt  bugfix006_report.txt  bugfix007_report.txt  bugfix008_report.txt  bugfix009_report.txt  bugfix010_report.txt  bugfix011_report.txt  bugfix012_report.txt  (+38 more)
test_generate_test/: test_for_complex.py  test_for_simple.py
tests/: conftest.py  test_api.py  test_diff_parser.py  test_json_cleaner.py  test_rule_engine.py  test_uncertain_case_detector.py
(+87 files in other folders)
